--- a/frontend/src/Page2/Page1.css
+++ b/frontend/src/Page2/Page1.css
@@ -4,25 +4,25 @@
 
 }
 .overlay{
-left:40px;
+left:100px;
 width: 100%;
 height: 100%;
-background: rgb(133, 133, 133);
 position: absolute;
 top:0;
 left:0;
-opacity: 0.95;
+
+background:  rgba(0, 0, 0, 0.588);
 
 }
 .page1{
-  background: #fdfdfd;
+  background: #ffffff;
   border-radius: 20px;
   height: 779px;
   position: relative;
   overflow: hidden;
   width: 848px;
-  left: 250px;
-  top: 100px;
+  left: 300px;
+  top: 125px;
 }
 .page1 .Frame1{
   
@@ -61,7 +61,7 @@ opacity: 0.95;
     text-align: left;
     font-family: "Inter-Medium", sans-serif;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
     position: absolute;
     left: 8px;
     top: 50%;
@@ -72,28 +72,35 @@ opacity: 0.95;
     width: 376px;
     height: 27px;
     position: absolute;
-    left: 44px;
-    top: 230px;
     overflow: hidden;
     font-weight:600;
-   font-size:18px;
+    font-family: "Satoshi Variable";
+    left: 40px;
+    top: 230px;
    
 }
-.page1 .frame4-1{
+.page1 .frame4-0{
     border-radius: 10px;
     border-style: solid;
     border-color: #000000;
     border-width: 1px;
-    width: 370px;
+    width: 372px;
     height: 58px;
     position: absolute;
     left: 40px;
     top: 250px;
-    outline: none;
-    font-size: 16px;
-     font-family: "Satoshi Variable";
-     font-weight:600;
-    
+}
+.page1 .frame4-1{
+    color: #000000;
+    text-align: left;
+    font-family: "Inter-Medium", sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    translate: 0 -50%;
+    outline: none; 
 }
 .page1 .frame5{
     width: 376px;
@@ -123,7 +130,7 @@ opacity: 0.95;
     text-align: left;
     font-family: "Inter-Medium", sans-serif;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
     position: absolute;
     left: 8px;
     top: 50%;
@@ -189,7 +196,7 @@ opacity: 0.95;
 }
 
 .page1 .frame8-2{
-    color: #acaaaa;
+    color: #212121;
     text-align: left;
     font-family: "Inter-Medium", sans-serif;
     font-size: 18px;
@@ -199,6 +206,7 @@ opacity: 0.95;
     top: 50%;
     translate: 0 -50%;
     outline: none;
+    right:10px;
 }
 
 .page1 .frame7-3{
@@ -214,17 +222,23 @@ opacity: 0.95;
     outline: none;
 }
 .page1 .frame7-11{
-    color: #acaaaa;
+  
     text-align: left;
     font-family: "Inter-Medium", sans-serif;
     font-size: 18px;
-    font-weight: 150;
+    font-weight: 500;
     position: absolute;
     left: 18px;
     top: 50%;
     translate: 0 -50%;
     outline: none;
+    -moz-appearance: textfield;
 }
+.page1 .frame7-11::-webkit-outer-spin-button,
+.page1 .frame7-11::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+
 .page1 .frame8{
     width: 376px;
     height: 27px;
@@ -309,8 +323,66 @@ opacity: 0.95;
     left: 650px;
     top: 705px;
     overflow: hidden;
-    color:rgba(255, 255, 255, 1)
+    color:rgba(255, 255, 255, 1);
+    cursor: pointer;
+    
 }
 .page1 .frame11:hover{
     background:rgb(1, 156, 233) ;
 }
+
+.dropdown{
+    padding: 15px;
+    
+}
+.selected{
+ 
+ border-radius: 6px;
+ max-width: 350px;
+ cursor: pointer;
+ position: relative;
+font-family: "Satoshi Variable";
+font-weight: 550;
+top: 6px;
+}
+.input{
+ outline: none;
+ font-weight: 500;
+font-size: 18px;
+ font-family: "Satoshi Variable"; 
+ cursor: pointer
+}
+.dropdown .selected::after{
+    display: block;
+    content: "";
+    width: 3px;
+    height: 3px;
+    border-right: 2px solid rgb(110, 110, 110);
+    border-bottom: 2px solid rgb(110, 110, 110);
+    transform: rotate(45deg);
+    position: absolute;
+    right: 15px;
+    top: 10px; 
+}
+
+.dropdown .item-holders{
+border-radius: 6px;
+background-color: rgb(255, 255, 255);
+border-radius: 5px;
+position: absolute;
+top: 110%;
+width: 370px;
+cursor: pointer;
+right: 2px;
+box-shadow: 4px 4px 4px 0px rgb(234, 231, 231);
+font-weight:500;
+font-family: "Satoshi Variable";
+}
+.dropdown .item-holders .dropdown-items{
+    padding: 10px 16px;
+}
+.dropdown .item-holders .dropdown-items:hover{
+    background-color: #dedede;
+    
+}
+  
