--- a/frontend/src/Frame1/Frame1.css
+++ b/frontend/src/Frame1/Frame1.css
@@ -15,14 +15,14 @@
   }
   .frame-1 .frame-2{
    
-    justify-content: center;
+  justify-content: center;
   width: 1440px;
   height: 230px;
   position: absolute;
   left: 0px;
   top: 0px;
   box-shadow: 4px 4px 4px 0px rgb(254, 248, 248);
-  overflow: hidden;         
+           
   }
   .frame-1  .line{
     font-size: 30px;
@@ -58,41 +58,48 @@
     top: 165px;
     overflow: visible;
   }
+    .frame-1  .barline1{
+    border-radius:5px;
+    height: 3px;
+    background: #000000;
+    position: absolute;
+  } 
+  
+  
   .frame-1  .barline{
-    font-size: 30px;
+    position: absolute;
+    left: 1130px;
+    top: 190px;
+    height:3px;
     width:248.5px;
-    font-weight: 2;
-    position: absolute;
-    left: 1150px;
-    top: 165px;
-    overflow: visible;
+    border-radius:5px;
+    background:#ddd;
+   
   }
-  .frame-1  .barline{
-    font-size: 30px;
+  .frame-1  .slider{
+     position: relative;  
+  }
+  .frame-1  .slider input{
+   
+    height: 3px;
+    position: absolute; 
+    left: 1130px;
+    top: 190px;
+    background: none;
+    pointer-events: none; 
+    -webkit-appearance:none;   
     width:248.5px;
-    font-weight: 2;
-    position: absolute;
-    left: 1150px;
-    top: 165px;
-    overflow: visible;
+   
   }
-  .frame-1  .barline1{
-    font-size: 30px;
-    width:80.5px;
-    font-weight: 0;
-    position: absolute;
-    left: 1150px;
-    top: 165px;
-    overflow: visible;
+ input[type="range"]::-webkit-slider-thumb{
+    background-color: #000000;
+    height: 12px;
+    width: 12px;
+     -webkit-appearance:none; 
+    pointer-events: auto;  
+    border-radius: 10px;
   }
-  .frame-1  .dot{
-    font-size: 130px;
-    font-weight: 2;
-    position: absolute;
-    left: 1140px;
-    top: 65px;
-    overflow: visible;
-  }
+  
   .frame-1  .dot1{
     font-size: 130px;
     font-weight: 2;
@@ -128,16 +135,7 @@
   top: 175px;
   overflow: visible;
 }
-.frame-1 .location{
-  color: #686868;
-  text-align: center;
-  font-family: "SatoshiVariable-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 20;
-  position: absolute;
-  left: 450px;
-  top: 180px;
-}
+
 .frame-1 .vector1{
   width: 0px;
   height: 48px;
@@ -146,40 +144,116 @@
   top: 176px;
   overflow: visible;
 }
-.frame-1 .vector2{
-  width: 0px;
-  height: 48px;
+
+
+.frame-1 .vector3{
+  width: 18.07px;
+  height: 14px;
   position: absolute;
-  left: 650px;
+  left:820px;
   top: 180px;
   overflow: visible;
 }
-.frame-1 .jobtype{
+.location-dropdown .item-holder{
+  border-radius: 6px;
+  background-color: #ffffff;
+  border: 1px solid rgb(153, 153, 153);
+  position: absolute;
+  top: 100%;
+  width: 200px;
+}
+
+.location-dropdown .item-holder .dropdown-items{
+  padding: 5px 15px;
+  cursor: pointer;
+}
+
+.location-dropdown .item-holder .dropdown-items:hover{
+  background-color: #ddd;
+  border-radius: 5px;
+}
+.frame-2 .location-dropdown{
+  padding: 12px;
+  width: 200px;
+  position: relative;
   color: #686868;
   text-align: start;
   font-family: "SatoshiVariable-Medium", sans-serif;
   font-size: 16px;
   font-weight: 20;
   position: absolute;
-  left: 850px;
-  top: 180px;
+  left: 430px;
+  top: 158px;
 }
+.frame-2 .location-selected{
+  background-color: rgb(255, 255, 255);
+  padding: 10px 16px;
+  cursor: pointer;
+  position: relative;
+}
+.frame-2 .location-selected::after{
+  display: block;
+ content: "";
+ width: 3px;
+ height: 3px;
+ border-right: 2px solid rgb(110, 110, 110);
+ border-bottom: 2px solid rgb(110, 110, 110);
+ transform: rotate(45deg);
+ position: absolute;
+ left: 180px;
+ top: 16px;
+}
+
+
+.frame-2 .custom-dropdown{
+  padding: 12px;
+  width: 175px;
+  position: relative;
+  color: #686868;
+  text-align: start;
+  font-family: "SatoshiVariable-Medium", sans-serif;
+  font-size: 16px;
+  font-weight: 18;
+  position: absolute;
+  left: 830px;
+  top: 158px;
+ 
+}
+.frame-1 .dropdown-selected{
+ background-color: rgb(255, 255, 255);
+ padding: 10px 16px;
+ cursor: pointer;
+ position: relative;
+}
+.frame-1 .dropdown-selected::after{
+ display: block;
+ content: "";
+ width: 3px;
+ height: 3px;
+ border-right: 2px solid rgb(110, 110, 110);
+ border-bottom: 2px solid rgb(110, 110, 110);
+ transform: rotate(45deg);
+ position: absolute;
+ right: 15px;
+ top: 16px;
+}
+
+.custom-dropdown .items-holder{
+  border-radius: 5px;
+  background-color: #ffffff;
+  border: 1px solid rgb(153, 153, 153);
+  position: absolute;
+  top: 100%;
+  width: 150px;
+}
+.custom-dropdown .items-holder .dropdown-item{
+  padding: 5px 15px;
+  cursor: pointer;
   
-.frame-1 .vector3{
-  width: 18.07px;
-  height: 16px;
-  position: absolute;
-  left:820px;
-  top: 180px;
-  overflow: visible;
 }
-.frame-2 .vector4{
-  width: 0px;
-  height: 48px;
-  position: absolute;
-  left: 950px;
-  top: 178px;
-  overflow: visible;
+.custom-dropdown .items-holder .dropdown-item:hover{
+  background-color: #ddd;
+  border-radius: 1px;
 }
 .frame-2 .salary-per-month{
   color: #222222;
@@ -209,14 +283,14 @@
   left: 64px;
   top: 265px;
   gap:16px;
-  overflow: hidden;  
+  
  
 }
 .frame-1 .table1{
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+ 
   box-shadow: 0px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(253, 253, 253);
 }
@@ -231,7 +305,7 @@
   border:1px;
   border-radius: 13.18px;
   box-shadow: 0px 4px 4px 0px rgba(234, 234, 234, 1);
-  overflow: hidden;
+  
 }
 .frame-1 .amazon-logo{
   width: 60px;
@@ -251,7 +325,6 @@
   left: 222px;
   top: 16px;
 
-  overflow: hidden;
 }
 .frame-1 ._24-h-ago{
   color: #000000;
@@ -271,7 +344,7 @@
   position: absolute;
   left: 16px;
   top: 117px;
-  overflow: hidden;
+  
 }
 .frame-1 .full-stack-developer{
   color: #000000;
@@ -302,7 +375,7 @@
   position: absolute;
   left: 20px;
   top: 160px;
-  overflow: visible;
+  
 }
 .frame-1 .building{
   width: 16.36px;
@@ -310,7 +383,7 @@
   position: absolute;
   left: 120px;
   top: 160px;
-  overflow: visible;
+  
 }
 .frame-1 .onsite{
   color: #5a5a5a;
@@ -338,7 +411,7 @@
   position: absolute;
   left: 210px;
   top: 165px;
-  overflow: visible;
+  
 }
 
 .frame-1 .text{
@@ -361,7 +434,7 @@
   left: 50%;
   translate: -50%;
   top: 290px;
-  overflow: hidden;
+  
 }
 .frame-1 .apply-now{
   color: #ffffff;
@@ -379,7 +452,7 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+  
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:330px;
@@ -388,7 +461,6 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:660px;
@@ -398,7 +470,7 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+  
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:990px;
@@ -412,7 +484,7 @@
   left: 64px;
   top: 640px;
   gap:16px;
-  overflow: hidden; 
+  
   
 }
 
@@ -420,7 +492,7 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+ 
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:0px;
@@ -429,7 +501,7 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+ 
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:330px;
@@ -438,7 +510,7 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:990px;
@@ -448,7 +520,7 @@
   width: 316px;
   height: 360px;
   position: absolute;
-  overflow: hidden;
+ 
   box-shadow: 2px 2px 4px 0px rgba(199, 77, 77, 0.15);
   background-color: rgb(255, 255, 255);
   left:660px;
